[package]
name = "rich-strong-client"
version = "0.1.0"
edition = "2021"
description = "the client side of rich strong (a socks5 proxy written in Rust)"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rich-strong-lib = "0.1.0"